syntax = "proto3";

option csharp_namespace = "BuildingBlocks.Grpc";

package catalog;

// Catalog Service - provides product information
service CatalogGrpc {
    // Get a single product by ID
    rpc GetProduct(GetProductRequest) returns (ProductResponse);
    
    // Get multiple products by their IDs
    rpc GetProductsByIds(GetProductsByIdsRequest) returns (ProductsResponse);
    
    // Check product availability
    rpc CheckProductAvailability(CheckAvailabilityRequest) returns (AvailabilityResponse);
}

message GetProductRequest {
    int32 product_id = 1;
}

message GetProductsByIdsRequest {
    repeated int32 product_ids = 1;
}

message CheckAvailabilityRequest {
    int32 product_id = 1;
    int32 quantity = 2;
}

message ProductResponse {
    bool success = 1;
    string error_message = 2;
    ProductDto product = 3;
}

message ProductsResponse {
    bool success = 1;
    string error_message = 2;
    repeated ProductDto products = 3;
}

message AvailabilityResponse {
    bool success = 1;
    bool is_available = 2;
    string error_message = 3;
}

message ProductDto {
    int32 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    double discounted_price = 5;
    bool has_discount = 6;
    int32 stock_quantity = 7;
    bool is_available = 8;
    string image_url = 9;
    int32 category_id = 10;
    string category_name = 11;
}
